todo-app/manifests/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: todo-namespace
  labels:
    name: todo-namespace
