todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
  namespace: todo-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: shared-dir
          persistentVolumeClaim:
            claimName: todo-claim
      containers:
        - name: todo-backend
          image: rikusarlin/todo-backend:version9
          volumeMounts:
          - name: shared-dir
            mountPath: /tmp/pictures
        - name: todo-frontend
          image: rikusarlin/todo-frontend:version9
