todo-app/manifests/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-todo-svc
  namespace: todo-namespace
spec:
  selector:
    app: postgresql-todo-db
  type: NodePort
  ports:
    - port: 5432
