todo-app/manifests/service_backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
  namespace: todo-namespace
spec:
  type: LoadBalancer
  selector:
    app: todo-app
  ports:
    - port: 2348
      protocol: TCP
      targetPort: 3001
