todo-app/manifests/service_frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-svc
  namespace: todo-namespace
spec:
  type: LoadBalancer
  selector:
    app: todo-app
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 3000
